...
            </View>
          ),
          tabBarTestID: 'calendar',
          title: t('calendar'),
        })} />
      <Tab.Screen
        name="Settings"
        component={SettingsScreen}
        options={({ navigation }) => ({
          ...defaultOptions,
          headerShown: false,
          tabBarTestID: 'settings',
          title: t('settings'),
...
