...
        style={{
          flexDirection: "row",
          justifyContent: "space-evenly",
          [closeLeft ? "marginLeft" : "marginRight"]: -8,
        }}
      >
        <CloseButton testID="log-list-close" onPress={() => onClose?.()} />
      </View>
    </View>
  );

  return (
    <View
...
