...

  return (
    <View style={{ flex: 1 }} onLayout={onLayout}>
      {width > 0 && (
        <FlashList
          ref={listRef}
          testID="calendar-list"
          data={months}
          renderItem={renderMonth}
          keyExtractor={getKey}
          getItemType={getType}
          contentContainerStyle={contentStyle}
          scrollIndicatorInsets={indicatorInsets}
...
          ListFooterComponent={footer}
        />
      )}
    </View>
  );
};
const Calendar = memo(CalendarComponent);
Calendar.displayName = "Calendar";
export default Calendar;

