...
        style={[
          styles.navigation,
          { backgroundColor: colors.calendarBackground },
        ]}
      >
        <Pressable
          testID="calendar-week-previous"
          accessibilityRole="button"
          accessibilityLabel={t("calendar_week_previous")}
          onPress={() => goTo(-1, "previous")}
          style={styles.chevron}
        >
          <ChevronLeft
...
          style={[styles.navigationTitle, { color: colors.text }]}
        >
          {dayjs(days[3]).format("MMMM YYYY")}
        </Text>
        {!isCurrentWeek && (
          <LinkButton
            testID="calendar-week-today"
            onPress={() => onChangeDate(null, "today")}
          >
            {t("today")}
          </LinkButton>
        )}
        <Pressable
...
