...
          })}
        </View>
      ))}
    </View>
  );
};
const Year = memo(YearComponent);

const YearViewComponent = ({
  onOpenMonth,
  header,
}: {
  onOpenMonth: (month: string) => void;
...
