...
              height: 120,
              maxWidth: 420,
              width: "100%",
              alignSelf: "center",
            }}
          >
            <TextArea placeholder="How was your day?" />
          </View>
        ),
      },
      {
        name: "Search input",
        source:
...
